--- a/Auto City Insights/css/signup.css
+++ b/Auto City Insights/css/signup.css
@@ -13,6 +13,7 @@ body {
 }
 h1 {
   text-align: center;
+  color: white;
 }
 input[type=text], input[type=password] {
   width: 100%;
@@ -65,10 +66,10 @@ button:hover {
 
 .logo{
     height: 70px;
-    padding-left: 50px;
 }
 
 .header{
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
+    
 }
