--- a/Auto City Insights/css/signup.css
+++ b/Auto City Insights/css/signup.css
@@ -75,11 +75,17 @@ button:hover {
 
 .header{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    
 }
 
 .redSignUp{
     display: flex;
     justify-content: center;
-    background-color: red;
+    background-color: rgb(154, 0, 0);
+}
+
+.signup-row{
+    display: flex;
+    justify-content: space-evenly;
 }
