--- a/Auto City Insights/css/signup.css
+++ b/Auto City Insights/css/signup.css
@@ -27,7 +27,10 @@ input[type=text], input[type=password] {
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
+
 }
+
+
 button {
   background-color: #4CAF50;
   color: white;
@@ -45,16 +48,12 @@ button:hover {
   padding: 10px 18px;
   background-color: #f44336;
 }
-.signupbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #4CAF50;
-}
+
 .container .cancelbtn, .container .signupbtn {
   width: 50%;
 }
 .signupbtn {
-  width: 100%;
+  width: 20%;
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
@@ -62,6 +61,11 @@ button:hover {
   border: none;
   cursor: pointer;
 }
+.signupbtn-row{
+    display: flex;
+    justify-content: center;
+}
+
 .signupbtn:hover {
   opacity: 0.8;
 }
@@ -89,3 +93,4 @@ button:hover {
     display: flex;
     justify-content: space-evenly;
 }
+
