cleaned up code

--- a/Auto City Insights/css/signup.css
+++ b/Auto City Insights/css/signup.css
@@ -94,3 +94,8 @@ button:hover {
     justify-content: space-evenly;
 }
 
+/* this is default for label */
+b {
+    color: darkgray;
+    font-weight: 100;
+}
