--- a/Auto City Insights/css/login.css
+++ b/Auto City Insights/css/login.css
@@ -1,18 +1,25 @@
-
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #141111;
 }
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+
+  
 }
 h1 {
   text-align: center;
+  color: white;
 }
+
+h2 {
+  color: white;
+  padding: 15px 0 15px 0;
+}
+
 input[type=text], input[type=password] {
   width: 100%;
   padding: 12px 20px;
@@ -20,7 +27,10 @@ input[type=text], input[type=password] {
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
+
 }
+
+
 button {
   background-color: #4CAF50;
   color: white;
@@ -38,26 +48,74 @@ button:hover {
   padding: 10px 18px;
   background-color: #f44336;
 }
-.signinbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #4CAF50;
-}
-.container .cancelbtn, .container .signinbtn {
+
+.container .cancelbtn, .container .signupbtn {
   width: 50%;
 }
 .signupbtn {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
+  width: 40%;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
 }
+.signupbtn-row{
+    display: flex;
+    justify-content: center;
+    padding: 4px;
+}
+
 .signupbtn:hover {
   opacity: 0.8;
 }
 .container .signupbtn {
   width: auto;
+}
+
+.logo{
+    height: 70px;
+}
+
+.header{
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+
+.redSignIn{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(154, 0, 0);
+}
+
+.signin-form{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.signin-row{
+    display: flex;
+    justify-content: space-between;
+    gap: 100px;
+    
+}
+
+/* this is default for label */
+b {
+    color: darkgray;
+    font-weight: 100;
+}
+
+.signin-text{
+    display: flex;
+    align-items: center;
+}
+
+.forgot-text{
+    display: flex;
+    align-items: center;
+    font-weight: 100;
+    color: orangered !important; 
 }
