--- a/Auto City Insights/style.css
+++ b/Auto City Insights/style.css
@@ -273,7 +273,7 @@ header{
 footer{
     margin-top: 20px;
     padding: 20px;
-    background-color:  #52057b;
+    background-color:  #7c0404;
     display: block;
     text-align: center;
 }
