a ton of refactorization for brand

--- a/Auto City Insights/style.css
+++ b/Auto City Insights/style.css
@@ -325,7 +325,7 @@ footer{
 
 
 /* ########################################### */
-/*            detail.html                      */
+/*            comment.html                      */
 /* ########################################### */
 
 .head{
