--- a/Auto City Insights/style.css
+++ b/Auto City Insights/style.css
@@ -25,37 +25,37 @@ h1{
 
 
 /* ########################################### */
-/*           Forums.html                       */
+/*           Reviews.html                       */
 /* ########################################### */
 .container{
     margin: 20px;
     padding: 20px;
 }
 
-.subforum{
+.subreview{
     margin-top:20px;
 }
 
-.subforum-title{
+.subreview-title{
     background-color:#292B2E;
     padding: 5px;
     border-radius: 5px;
     margin:4px;
 }
 
-.subforum-row{
+.subreview-row{
     display: grid;
     grid-template-columns: 7% 60% 13% 20%;
 }
 
-.subforum-column{
+.subreview-column{
     padding: 10px;
     margin:4px;
     border-radius: 5px;
     background-color:#111314;
 }
 
-.subforum-description *{
+.subreview-description *{
     margin-block: 0;
 }
 
@@ -65,11 +65,11 @@ h1{
     align-items: center;
 }
 
-.subforum-icon i{
+.subreview-icon i{
     font-size: 45px;
 }
 
-.subforum-devider{
+.subreview-devider{
     display: none;   
 }
 
@@ -81,13 +81,13 @@ h1{
         padding: 10px;
     }
 
-    .subforum-row{
+    .subreview-row{
         display: grid;
         grid-template-columns: 25% 75%;
         grid-template-rows: 65% 35%;
     }
 
-    .subforum-devider{
+    .subreview-devider{
         display: block;
         border: 0;
         height: 1px;
@@ -105,12 +105,12 @@ h1{
         padding: 15px;
     }
 
-    .subforum-row{
+    .subreview-row{
         display: grid;
         grid-template-columns: 10% 60% 10% 20%;
     }
 
-    .subforum-icon i{
+    .subreview-icon i{
         font-size: 35px;
     }
 
@@ -258,8 +258,8 @@ header{
 
 }
 
-/* forum info Styling */
-.forum-info{
+/* review info Styling */
+.review-info{
     padding: 20px;
     background-color: #111314;
 }
