--- a/Auto City Insights/style.css
+++ b/Auto City Insights/style.css
@@ -134,7 +134,7 @@ header{
     align-items: center;
 }
 .navigation{
-    background-color:#52057b;
+    background-color: rgb(154, 0, 0);
     padding: 10px;
     width: 65%;
     display: inline-block;
@@ -160,7 +160,6 @@ header{
     text-align: center;
     margin-inline: 20px;
     font-size: 20px;
-    padding: 10px;
     color:#fff;
 }
 
@@ -221,12 +220,12 @@ header{
 
   /* Search Box styles */
 .search-box{
-    border: solid 1px #52057b;
+    border: solid 1px lightgray;
     margin-top: 20px;
     padding: 40px;
     display:flex;
     justify-content: center;
-    box-shadow:1px 2px 3px #52057b;
+    box-shadow:1px 2px 3px lightgray;
 }
 
 .search-box select{
