--- a/style.css
+++ b/style.css
@@ -369,8 +369,48 @@ footer{
 }
 
 /* comment section */
+
+#comment_form {
+    max-width: 400px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+}
+
+input[type="submit"] {
+    background-color: #af4c4c;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #45a049;
+}
+
 .comment-area{
     margin-bottom:50px;
+}
+
+.comment{
+    margin: 0 auto;
+    text-align: center;
 }
 
 .comment-area textarea{
@@ -390,11 +430,3 @@ footer{
 .comment-area input:hover{
     border: solid 1px #000000;
 }
-
-
-
-
-
-
-
-
